AC_PREREQ([2.71])

AC_INIT([chroot-escape], [1.0], [viktprog@gmail.com])
AC_COPYRIGHT([Copyright (c) 2026  Viktor Ivanov])

AC_CONFIG_AUX_DIR([auxdir])
AM_INIT_AUTOMAKE([-Wall -Werror])
AM_MAINTAINER_MODE
AM_SILENT_RULES(yes)

AC_CANONICAL_HOST

AC_CONFIG_HEADERS([config.h])

AC_PROG_CC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
